# aoc2018

./: README.md
day1/cpp/: CMakeLists.txt  main.cpp  part2.cpp
day2/cpp/: CMakeLists.txt  part1.cpp  part2.cpp
day3/cpp/: CMakeLists.txt  part1.cpp
day4/cpp/: CMakeLists.txt  accumulators.cpp  accumulators.h  guardrecords.cpp  guardrecords.h  sleeprecords.cpp  sleeprecords.h  task1.cpp  task2.cpp
day5/cpp/: datasource.cpp  datasource.h  shrinker.cpp  shrinker.h  task1.cpp
day6/cpp/: CMakeLists.txt  DataReader.cpp  DataReader.h  Makefile  task1.cpp  task2.cpp
