cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(task1 task1.cpp guardrecords.h guardrecords.cpp sleeprecords.cpp accumulators.h accumulators.cpp)
add_executable(task2 task2.cpp guardrecords.h guardrecords.cpp sleeprecords.cpp accumulators.h accumulators.cpp)